--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ POSTGRES_PORT=5432
 POSTGRES_DATABASE_NAME=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+POSTGRES_TEST_DATABASE_NAME=
+
+PICCOLO_CONF="piccolo_conf"
 
 FASTAPI_PORT=8000
 
@@ -15,3 +18,11 @@ GoogleProjectNumber=
 GoogleProjectID=
 GOOGLE_APPLICATION_CREDENTIALS=
 GOOGLE_API_KEY=
+
+
+###### LOCAL #######
+#POSTGRES_HOST=localhost
+#POSTGRES_DATABASE_NAME=
+#POSTGRES_USER=
+#POSTGRES_PASSWORD=
+#GOOGLE_APPLICATION_CREDENTIALS="... /universal_flash_cards_chatbot/flach-card-chat-bot-f24d957bd2d0.json"
