--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,7 +25,7 @@ jobs:
           script: |
             pwd
             eval "$(ssh-agent)"
-            ssh-add ~/.ssh/id_rsa_github.ssh
+            ssh-add ~/.ssh/id_rsa
             cd ${{ secrets.PROJECT_PATH }}
             pwd
             git pull origin main
