--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,20 @@ services:
       POSTGRES_USER: "${POSTGRES_USER:-bot}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-bot}"
 
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4
+    profiles:
+      - "dev"
+    restart: on-failure
+    environment:
+      PGADMIN_DEFAULT_EMAIL: kos.zivenko@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: flash_card
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    ports:
+      - "5050:80"
+
 volumes:
   postgres: {}
+  pgadmin_data:
