--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,12 @@ services:
       POSTGRES_USER: "${POSTGRES_USER:-bot}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-bot}"
 
+  redis:
+    image: redis/latest
+    container_name: redis
+    ports:
+      - '6379:6379'
+
   pgadmin:
     container_name: pgadmin_container
     image: dpage/pgadmin4
