--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-bot}"
 
   redis:
-    image: redis/latest
+    image: redis:latest
     container_name: redis
     ports:
       - '6379:6379'
