--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ pytest-asyncio = "^0.20.2"
 aiogram = "3.0.0b6"
 executor = "^23.2"
 parameterized = "^0.8.1"
+aioredis = "^2.0.1"
+redis = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
