--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest-asyncio = "^0.20.2"
 aiogram = "3.0.0b6"
 executor = "^23.2"
 parameterized = "^0.8.1"
+jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.10.0"
