--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: install poetry
         env:
           POETRY_NO_INTERACTION: "1"
-          POETRY_VERSION: "1.2.0"
+          # POETRY_VERSION: "1.2.0"
         run: curl -sSL https://install.python-poetry.org | python3 -
       - name: setup
         uses: actions/setup-python@v4
