--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ asyncpg = "^0.27.0"
 ipython = "^8.6.0"
 cryptography = "36.0.2"
 pytest-asyncio = "^0.20.2"
-aiogram = "3.0.0b6"
+aiogram = "^3.0.0b6"
 executor = "^23.2"
 parameterized = "^0.8.1"
 aioredis = "^2.0.1"
